Rename, add README

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "akku"
+name = "xiaoxiang"
 version = "0.1.0"
 description = ""
 authors = ["Jacek Chmielewski <jchmielewski@teonite.com>"]
